# PdfToMarkdown

./: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  README.md  basic_resume.md  coverage.xml  pyproject.toml  test.md  test_output.md
.github/workflows/: pylint.yml
pdf2markdown/: __init__.py  __main__.py
pdf2markdown/cli/: __init__.py  argument_parser.py  main.py  output_handler.py
pdf2markdown/core/: __init__.py  config.py  dependency_injection.py  exceptions.py  file_validator.py
pdf2markdown/domain/: __init__.py
pdf2markdown/domain/interfaces/: __init__.py  code_detector.py  document_analyzer.py  formatter.py  heading_detector.py  language_detector.py  list_detector.py  paragraph_detector.py  parser.py
pdf2markdown/domain/models/: __init__.py  document.py
pdf2markdown/domain/services/: __init__.py  code_detector.py  document_analyzer.py  heading_detector.py  language_detector.py  list_detector.py  paragraph_detector.py
pdf2markdown/infrastructure/: __init__.py
pdf2markdown/infrastructure/formatters/: __init__.py  markdown_formatter.py
pdf2markdown/infrastructure/parsers/: __init__.py  pdfminer_parser.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py  test_code_extraction.py  test_complete_list_pipeline.py  test_list_extraction.py  test_paragraph_extraction.py  test_pdf_processing_pipeline.py
tests/unit/: __init__.py  test_argument_parser.py  test_config.py  test_exceptions.py  test_file_validator.py  test_main_module.py
tests/unit/cli/: test_output_handler_simple.py
tests/unit/domain/models/: test_code_block.py  test_document.py  test_document_edge_cases.py  test_list_block.py  test_list_item.py  test_paragraph.py
tests/unit/domain/services/: __init__.py  test_code_detector.py  test_heading_detector.py  test_language_detector.py  test_list_detector.py  test_paragraph_detector.py
tests/unit/infrastructure/formatters/: __init__.py  test_markdown_formatter.py
tests/unit/infrastructure/parsers/: __init__.py  test_pdfminer_parser.py
